# ToogaBackend

./: .env.example  Cargo.toml  LICENSE  README.md  db.txt
.github/: CODEOWNERS
.github/workflows/: rust.yml
src/: config.rs  main.rs  router.rs  state.rs
src/api/: mod.rs
src/models/: users.rs
src/routes/: mod.rs  users.rs
src/types/: body_types.rs  internals.rs  mod.rs  query_types.rs
