[package]
name = "tooga_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "mysql" ] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
axum = "0.6.1"
axum-macros = "0.3.0"
dotenv = "0.15.0"
anyhow = "1.0.71"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
futures = "0.3.28"
tracing = "0.1"
tracing-subscriber = "0.3"