[package]
name = "tooga_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6"
axum-macros = "0.3"
chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
mongodb = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }